# ChangeLog for dev-perl/Geo-IP
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.15 2005/05/17 15:48:58 gustavoz Exp $

  17 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> Geo-IP-1.25.ebuild:
  Stable on sparc

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> Geo-IP-1.23.ebuild:
  Stable on ppc.

*Geo-IP-1.25 (02 Apr 2005)

  02 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> -Geo-IP-1.15.ebuild,
  Geo-IP-1.23.ebuild, +Geo-IP-1.25.ebuild:
  Marked 1.23 x86 stable, removed old 1.15, version bump to 1.25.

  28 Nov 2004; Eldad Zack <eldad@gentoo.org> Geo-IP-1.15.ebuild,
  Geo-IP-1.21.ebuild:
  QA: 3rd party mirrors update.

*Geo-IP-1.23 (28 Oct 2004)

  28 Oct 2004; Michael Cummings <mcummings@gentoo.org> +Geo-IP-1.23.ebuild:
  New version on cpan

  09 May 2004; <SeJo@gentoo.org> Geo-IP-1.21.ebuild:
  added ~ppc keyword

  21 Mar 2004; Michael Boman <mboman@gentoo.org> Geo-IP-1.15.ebuild,
  Geo-IP-1.21.ebuild:
  QA: IUSE variable was missing, unnecessary definition of S removed.

  16 Mar 2004; Michael Boman <mboman@gentoo.org> Geo-IP-1.21.ebuild:
  Marked 1.21 stable on x86

  29 Feb 2004; Michael Boman <mboman@gentoo.org> metadata.xml:
  Moving the package to 'netmon' herd.

  22 Nov 2003; Michael Boman <mboman@gentoo.org> metadata.xml:
  I'm now the primary maintainer of this package. Please report all bugs to
  mboman@gentoo.org

*Geo-IP-1.21 (22 Aug 2003)

  22 Aug 2003; Michael Cummings <mcummings@gentoo.org> Geo-IP-1.21.ebuild:
  Bug 26997 - Brian Youngstrom <briany@speakeasy.net> - version update

  08 Jul 2003; <solar@gentoo.org> metadata.xml:
  Added metadata.xml

  29 Jun 2003; <solar@gentoo.org> Geo-IP-1.15.ebuild:
  Added ~sparc to keywords after testing on sparc64

*Geo-IP-1.15 (29 Jun 2003)

  29 Jun 2003; <solar@gentoo.org> Geo-IP-1.15.ebuild:
  Initial Import of Geo-IP perl module
