@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Geo-IP
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.15 2005/05/17 15:48:58 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Geo-IP/ChangeLog,v 1.16 2005/08/12 10:18:02 mcummings Exp $
+
+  12 Aug 2005; Michael Cummings <mcummings@gentoo.org> Geo-IP-1.25.ebuild:
+  Marking stable x86 - marked an old one by mistake earlier
+
+  12 Aug 2005; Michael Cummings <mcummings@gentoo.org> Geo-IP-1.25.ebuild:
+  Marking stable x86
 
   17 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> Geo-IP-1.25.ebuild:
   Stable on sparc
